--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,16 @@ body {
 }
 
 /* Navbar Styles */
+.navbar {
+    background-color: #87CEEB	; /* Softer, refined yellow */
+}
+
+
 .navbar-brand {
     font-weight: bold;
     font-size: 1.8rem;
+	color: white !important; /* White text for the brand */
+
 }
 
 .navbar-nav .nav-link {
@@ -20,7 +27,7 @@ body {
 }
 
 .navbar-nav .nav-link:hover {
-    color: #6a11cb;
+    color:#FFAC1C	;
 }
 
 /* Hero Section */
